--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,20 +1,21 @@
 {%- assign contact = include.contact -%}
-<div class="{%if include.is_white %}bg-white text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-7 pb-8 sp-4 align-center">
+<div
+  class="{%if include.is_white %}bg-white text-black{%else%}bg-blue text-white{%endif%} col px-4 pt-7 pb-8 sp-4 align-center"
+>
   <div class="maxwidth-7 width-full sp-3 row q-xl-col q-xl-sp-6 pb-0 q-xl-pb-t6">
     <h2 class="font-heading text-xl maxwidth-4">{{contact.title}}</h2>
     <div class="push hide-lg"></div>
     <div class="row sp-5 q-md-col q-md-align-center">
-      {% asset {{contact.avatar_img}} class="rounded-full width-9 height-9" %}
+      {% asset {{contact.avatar_img}} class="rounded-full width-9 height-9" alt="Lächelndes Porträt
+      von {{contact.name}}" %}
       <div class="col sp-4">
         <div class="col">
           <div class="font-bold">{{contact.name}}</div>
           <div class="text-sm">{{contact.position}}</div>
         </div>
         <div class="col text-sm">
-          <div>T
-            {{contact.tel}}</div>
-          <div>M
-            {{contact.mobile}}</div>
+          <div>T {{contact.tel}}</div>
+          <div>M {{contact.mobile}}</div>
           <a class="reset-link" href="mailto:{{contact.email}}">{{contact.email}}</a>
         </div>
         {% if include.no_button != true %}
@@ -23,5 +24,11 @@
       </div>
     </div>
   </div>
-  <a href='/about.html#locations' class="{%if include.is_white %}link{%else%}link-white{%endif%} header-link width-full maxwidth-7"><h2 class="font-heading text-xl maxwidth-4">{{contact.our_locations}} {% asset icons/icon-arrow-right-up.svg @inline %}</h2></a>
+  <a
+    href="/about.html#locations"
+    class="{%if include.is_white %}link{%else%}link-white{%endif%} header-link width-full maxwidth-7"
+    ><h2 class="font-heading text-xl maxwidth-4">
+      {{contact.our_locations}} {% asset icons/icon-arrow-right-up.svg @inline %}
+    </h2></a
+  >
 </div>
