--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,15 @@
 <header class="main-header bg-white col align-center px-4 py-4 fixed width-full">
   <div class="maxwidth-7 width-full row sp-3 align-center">
     {% locale_link home %}
-    <img src="/assets/images/logo_d-labs.svg" alt="{{ site.title | escape }}" class="height-3 header-logo" />
+    <img src="/assets/images/logo_d-labs.svg" alt="D-Labs logo" class="height-3 header-logo" />
     {% endlocale_link %}
     <div class="push"></div>
 
     <nav class="row sp-7 align-baseline hide-lg">
       <div class="row sp-6 q-xl-sp-5 align-baseline">
-        {% for name in site.data.includes.header.pages %}
-        {% locale_link {{ name }} class:"link header-link" %}
-        {{site.data.includes.header[page.locale][name]}}
-        {% endlocale_link %}
-        {% endfor %}
+        {% for name in site.data.includes.header.pages %} {% locale_link {{ name }} class:"link
+        header-link" %} {{site.data.includes.header[page.locale][name]}} {% endlocale_link %} {%
+        endfor %}
       </div>
       {% language_switcher %}
     </nav>
@@ -22,7 +20,7 @@
     </div>
   </div>
 </header>
-<div class="hidden relative" id="mobile-nav" style="z-index: 11;">
+<div class="hidden relative" id="mobile-nav" style="z-index: 11">
   <div class="fixed col inset-full bg-white px-5 py-4 align-center">
     <div class="absolute top-4 right-4 mobile-nav-close-container">
       <button class="button-text show-lg" data-toggle="#mobile-nav">
@@ -31,11 +29,9 @@
     </div>
     <div class="push"></div>
     <nav class="col sp-4 align-center">
-      {% for name in site.data.includes.header.pages %}
-      {% locale_link {{ name }} class:"link header-link text-center within-overlay" %}
-      {{site.data.includes.header[page.locale][name]}}
-      {% endlocale_link %}
-      {% endfor %}
+      {% for name in site.data.includes.header.pages %} {% locale_link {{ name }} class:"link
+      header-link text-center within-overlay" %} {{site.data.includes.header[page.locale][name]}} {%
+      endlocale_link %} {% endfor %}
     </nav>
     <div class="push maxheight-1"></div>
     {% language_switcher %}
