--- a/_includes/jobs-slider.html
+++ b/_includes/jobs-slider.html
@@ -4,24 +4,27 @@
   <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.slider_title}}</div>
   <div class="carousel">
     {%- for slide in _.slides -%}
-      <div>
-        <div class="row sp-5 px-5 q-md-col q-md-sp-2 align-center">
-          <div class="no-shrink py-3">
-            <div class="relative">
-              {% asset {{slide.img}} class="rounded-full height-10 width-10" %}
-              {% asset icons/icon-quotes.svg class="absolute height-6 right-0" style="bottom:-0.5rem;right:-0.5rem;" %}
-            </div>
+    <div>
+      <div class="row sp-5 px-5 q-md-col q-md-sp-2 align-center">
+        <div class="no-shrink py-3">
+          <div class="relative">
+            {% asset {{slide.img}} class="rounded-full height-10 width-10" alt="Lächelndes Porträt
+            von {{slide.name}}"%} {% asset icons/icon-quotes.svg class="absolute height-6 right-0"
+            style="bottom:-0.5rem;right:-0.5rem;" aria-hidden %}
           </div>
-          <div class="col sp-3">
-            <div class="text-xl q-md-text-lg q-sm-text-md font-heading">{{slide.quote | markdownify}}</div>
-            <div class="row sp-1 text-sm">
-              <div>{{slide.name}}</div>
-              <div>—</div>
-              <div class="font-bold">{{slide.position}}</div>
-            </div>
+        </div>
+        <div class="col sp-3">
+          <div class="text-xl q-md-text-lg q-sm-text-md font-heading">
+            {{slide.quote | markdownify}}
+          </div>
+          <div class="row sp-1 text-sm">
+            <div>{{slide.name}}</div>
+            <div>—</div>
+            <div class="font-bold">{{slide.position}}</div>
           </div>
         </div>
       </div>
+    </div>
     {%- endfor -%}
   </div>
 </div>
