--- a/_includes/post-tile.html
+++ b/_includes/post-tile.html
@@ -2,8 +2,11 @@
 
 <div class="col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full">
   <a href="{{post.url}}">
-    <img src="{{post.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
-    alt="{{post.hero_image.description}}" class="width-full" />
+    <img
+      src="{{post.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
+      alt=""
+      class="width-full"
+    />
   </a>
   <a href="{{post.url}}" class="reset-link">
     <h3 class="font-small-heading text-md">
