fix: missing href in apply now button

--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -63,7 +63,7 @@ layout: default
   <div class="maxwidth-3 width-full align-center col sp-5">
     <h3 class="font-heading text-xl q-md-text-lg text-white text-center">{{page.second_headline}}</h3>
     <div class="markdown text-sm text-white text-center">{{page.second_paragraph | markdownify}}</div>
-    <a href="{{_.apply_now_url}}" class="button is-black is-wide">{{_.apply_now_button_label}}</a>
+    <a href="{{_.apply_now_target}}" class="button is-black is-wide">{{_.apply_now_button_label}}</a>
   </div>
 </div>
 
